# 3d-model-scraper

./: .env.example  .gitignore  GRAPHICS_CAPTURE_ARCHITECTURE.md  README.md  SCREEN_TO_STL_ARCHITECTURE.md  requirements.txt
cpp/: CMakeLists.txt
cpp/buffer_capture/: CMakeLists.txt  mesh_extractor.cpp  mesh_extractor.h  texture_extractor.cpp  texture_extractor.h
cpp/depth_reconstruction/: CMakeLists.txt  point_cloud_generator.cpp  point_cloud_generator.h
cpp/export_engine/: CMakeLists.txt  glb_exporter.cpp  glb_exporter.h  obj_exporter.cpp  obj_exporter.h  stl_exporter.cpp  stl_exporter.h
cpp/graphics_hooks/: CMakeLists.txt  d3d11_hook.cpp  d3d11_hook.h  d3d12_hook.cpp  d3d12_hook.h  hook_manager.cpp  hook_manager.h  vulkan_hook.cpp  vulkan_hook.h
cpp/injector/: CMakeLists.txt  ipc_bridge.cpp  ipc_bridge.h  process_injector.cpp  process_injector.h
cpp/mesh_cleanup/: CMakeLists.txt  mesh_cleaner.cpp  mesh_cleaner.h
cpp/mesh_generation/: CMakeLists.txt  marching_cubes.cpp  marching_cubes.h  mesh_data.h
cpp/mesh_processor/: CMakeLists.txt  mesh_optimizer.cpp  mesh_optimizer.h
cpp/screen_capture/: CMakeLists.txt  camera_params.h  d3d11_backbuffer_hook.cpp  d3d11_backbuffer_hook.h  depth_buffer_extractor.cpp  depth_buffer_extractor.h  hook_manager.cpp  hook_manager.h
cpp/src/: main.cpp
examples/: basic_search.py  parameter_tuner_launcher.py  tui_launcher.py  wowhead_example.py
src/: __init__.py  api_client.py  config.py  converters.py  parameter_tuner.py  scraper.py  tui.py  utils.py
